Updated Streamlit details

--- a/Abhinav Singh/RAG_Application/readme
+++ b/Abhinav Singh/RAG_Application/readme
@@ -1,1 +1,14 @@
+## Live Demo
+- You can try the application live at: https://ragapplication-abhinavsingh.streamlit.app/
+
+## Installation
+- Make sure you have 3 files in root directory - main.py, api_keys.json, requirements.txt
+- add your own Groq and Nomic API keys in api_keys.json file
+- Run below commands at root directory in terminal to run the app on streamlit
+  1) ```bash
+     pip install -r .\requirements.txt
+     ```
+  2) ```bash
+     streamlit run main.py
+     ```
 
